# deskagent

./: .env.example  .gitignore  .gitmodules  README.md  engine.js
adapter/: responses-adapter.js
admin-web/: index.html  package-lock.json  package.json  vite.config.js
agentconfig/: README.md
app/: attachments.js  bridge.js  engine.js  index.html  index.js  package-lock.json  package.json  preload.js  renderer.js
dist-helpers/: 首次打开修复.command
docs/: macos-distribution.md  remote-relay-code-changes.md  remote-relay-test-report.md
server/: Cargo.toml
server/migrations/: 0001_init.sql
server/src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  meter.rs  models.rs  state.rs
server/src/routes/: admin.rs  billing.rs  gateway.rs  mod.rs  remote.rs  user.rs
server/src/sms/: mod.rs
server/tests/: fake_upstream.js  remote_routes.rs
test/: account-admin-regression.js  agentconfig-updater-smoke.js  backend-fallback-unit.js  bridge-smoke.js  bridge-tools-e2e.js  e2e.js  electron-ui-os-tools-smoke.js  engine-stream-item-scope-unit.js  live-relay-task-boundary-e2e.js  manual-payment-disabled-e2e.js  mcp-approval-e2e.js  native-os-tool-model-e2e.js  os-tools-bridge-unit.js  remote-direct-share-regression.js  remote-host-unit.js  remote-relay-host-regression.js  renderer-first-send-behavior.js  renderer-first-send-guard.js  renderer-turn-order-regression.js  responses-adapter-glm-unit.js  responses-adapter-mcp-namespace-regression.js  rich-renderer-katex-unit.js  system-api-e2e.js  system-test-report.md  thread-recovery-e2e.js  (+2 more)
(+66 files in other folders)
